--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
 		
 	</head>
 	<body>
- 		<div id="title_bar">Phone<strong>Gap</strong> Training App</div>
+ 		<div id="">
+			Phone<strong>Gap</strong> Training App
 		
-		TEST TEST
+			<br /><br />
+			TEST 
+		
+		</div>
+		
+		
 
 	</body>
 </html>
